# chrona

./: .gitignore  Chrona.idr  EvalContext.idr  Misc.idr  Preservation.idr  README.md  Term.idr
compiler/: LICENSE  README.md  chrona.cabal  notes.md  partial.chr  run.sh
compiler/src/Data/: Annotation.hs  Apply.hs  HFunctor.hs  Profunctor.hs  Reflection.hs  Sum.hs  Validation.hs
compiler/src/Data/HFunctor/: Basic.hs  TopDown.hs
compiler/src/Language/: Chrona.hs
compiler/src/Language/Chrona/: Monad.hs  Parser.hs  Types.hs  Typing.hs
compiler/src/Language/Chrona/Monad/: Error.hs  Types.hs
compiler/src/Language/Chrona/Parser/: Core.hs  Lexer.hs  Types.hs
compiler/test/: Spec.hs
doc/types/: Makefile  writeup.tex
metatheory/: Context.idr  Eval.idr  Progress.idr  Typecheck.idr  Typing.idr  Universe.idr  Value.idr  Weakening.idr
