name:                chrona
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tsani/chrona#readme
license:             BSD3
license-file:        LICENSE
author:              Jacob Thomas Errington
maintainer:          github@mail.jerrington.me
copyright:           Jacob Thomas Errington (c) 2017
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Data.HFunctor,
    Data.Annotation,
    Data.Reflection,
    Language.Chrona,
    Language.Chrona.Types,
    Language.Chrona.Parser
  build-depends:
    base >= 4.7 && < 5,
    megaparsec,
    text,
    comonad,
    containers,
    transformers
  default-language:    Haskell2010
  default-extensions:
    ApplicativeDo,
    ConstraintKinds,
    DataKinds,
    DeriveFoldable,
    DeriveFunctor,
    DeriveTraversable,
    FlexibleInstances,
    FlexibleContexts,
    FunctionalDependencies,
    GADTs,
    GeneralizedNewtypeDeriving,
    KindSignatures,
    LambdaCase,
    MultiParamTypeClasses,
    OverloadedStrings,
    PolyKinds,
    RankNTypes,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeApplications,
    TypeFamilies,
    TypeOperators,
    ViewPatterns
  ghc-options:
    -Wall
    -- -fprint-explicit-kinds

executable chrona-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chrona
  default-language:    Haskell2010

test-suite chrona-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chrona
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tsani/chrona
